--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Oyegbade</title>
+    <title>Oyegbade Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 
