--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
     <nav class="main-nav">
         <ul>
-            <li><a href="home.html" class="join">Home</a></li>
+            <li><a href="index.html" class="join">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="news.html">News</a></li>
