--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
     </section>
     <nav class="main-nav">
         <ul>
-            <li><a href="index.html" class="join">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="news.html">News</a></li>
+            <li class="nav"><a href="index.html" class="join">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">News</a></li>
         </ul>
     </nav>
+    <!-- <nav class="main-nav">
+        
+            <div><a href="index.html" class="join">Home</a></div>
+            <div><a href="about.html">About</a></div>
+            <div><a href="contact.html">Contact</a></div>
+            <div><a href="news.html">News</a></div>
+        
+    </nav> -->
     <main>
         <article>
             <h2>It's me, Oyegbade</h2>
