updated the home page banner image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h1 class="logotext">Oyegbade Adeyinka</h1>
     </header>
     <section class="banner">
-        <img src="OYEGBADE NEON.jpg" alt="oyegbade">
+        <!-- <img src="OYEGBADE NEON.jpg" alt="oyegbade"> -->
+        <img src="OYEGBADE-FORTNITE.jpg" alt="oyegbade">
         <div class="welcome">
             <h2>Welcome to <br><span>Oyegbade Blog</span></h2>
         </div>
