added hover effect to the header text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <header>
         <a href="index.html"><img class="logo" src="ogs-logo.png" alt="oyegbade logo"></a>
-        <h1 class="logotext">Oyegbade Adeyinka</h1>
+        <!-- <h1 class="logotext">Oyegbade Adeyinka</h1> -->
+        <span class="btn">Oyegbade Adeyinka </span>
     </header>
     <section class="banner">
         <!-- <img src="OYEGBADE NEON.jpg" alt="oyegbade"> -->
