--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
         <div class="welcome stagger1">
             <!-- <h2>Welcome to <br><span>Oyegbade Blog</span></h2> -->
-            <svg class="stagger1" width="40" height="77" viewBox="0 0 40 77">
+            <svg class="stagger1 move" width="40" height="77" viewBox="0 0 40 77">
                 <g id="scroll" transform="translate(-253 -787)">
                   <g id="Rectangle_12" data-name="Rectangle 12" transform="translate(253 787)" fill="none" stroke="#fff" stroke-width="4">
                     <rect width="40" height="77" rx="20" stroke="none"/>
